PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 6.0
- Unicode support. (Andrei, Dmitry, et al)
- Added E_STRICT to E_ALL. (Dmitry)
- Dropped safe_mode support (Ilia, Andi)
- Dropped zend.ze1_compatibility_mode (Dmitry)
- Dropped allow_call_time_pass_reference, added E_STRICT error message. (Dmitry)
- Dropped register_long_arrays (Dmitry)
- Droped register_globals support (Pierre)
  - session_register, session_unregister and session_is_registered removed they
    depend on register_globals
- Droped magic_quotes_gpc, magic_quotes_runtime and magic_quotes_sybase ini
  settings (Pierre)
  -  get_magic_quotes_gpc, get_magic_quotes_runtime are kept but always return
     false, set_magic_quotes_runtime raises an E_CORE_ERROR
- Freetype 1.x and GD 1.x support removed (Pierre)
- Cleaned CGI code. Now FastCGI can not be disabled. See sapi/cgi/CHANGES
  for more details. (Dmitry)
- Removed support for "continue" and "break" operators with non-constant
  operands. (Dmitry)
- Implemented "jump label" operator (limited "goto"). (Dmitry, Sara)
- Changed __toString() behavior to call it in all necessary places
  (Marcus, Dmitry)
- Changed "instanceof" and "catch" operators, is_a() and is_subclass_of()
  functions to not call __autoload(). (Dmitry)
- Removed global reflection constants. (Johannes)
- Added "allow_url_include" ini directive to be able to turn off remote url
  code execution separately from the "allow_url_fopen" setting. (Rasmus)
- Added to cURL extension: (Ilia)
  . curl_setopt_array() which allows setting of multiple cURL options.
  . CURLINFO_HEADER_OUT constant to facilitate request retrieval.
- Added --rclass and --rextension CLI parameters to reflect internal classes
  and loaded extensions. (Johannes)
- Added optional parameter to http_build_query() to allow specification of 
  string separator. (Ilia)