@@ -1634,11 +1634,14 @@ static int ZEND_RETURN_SPEC_CONST_HANDLER(ZEND_OPCODE_HANDLER_ARGS)
 		if (IS_CONST == IS_VAR && !(*retval_ptr_ptr)->is_ref) {
 			if (opline->extended_value == ZEND_RETURNS_FUNCTION &&
 			    EX_T(opline->op1.u.var).var.fcall_returned_reference) {
+			} else if (opline->extended_value == ZEND_RETURNS_NEW) {
 			} else if (EX_T(opline->op1.u.var).var.ptr_ptr == &EX_T(opline->op1.u.var).var.ptr) {
 				if (IS_CONST == IS_VAR && !0) {
 					PZVAL_LOCK(*retval_ptr_ptr); /* undo the effect of get_zval_ptr_ptr() */
 				}
-				zend_error(E_NOTICE, "Only variable references should be returned by reference");
+//				if (opline->extended_value != ZEND_RETURNS_NEW) {
+					zend_error(E_NOTICE, "Only variable references should be returned by reference");
+//				}
 				goto return_by_value;
 			}
 		}
@@ -4109,11 +4112,14 @@ static int ZEND_RETURN_SPEC_TMP_HANDLER(ZEND_OPCODE_HANDLER_ARGS)
 		if (IS_TMP_VAR == IS_VAR && !(*retval_ptr_ptr)->is_ref) {
 			if (opline->extended_value == ZEND_RETURNS_FUNCTION &&
 			    EX_T(opline->op1.u.var).var.fcall_returned_reference) {
+			} else if (opline->extended_value == ZEND_RETURNS_NEW) {
 			} else if (EX_T(opline->op1.u.var).var.ptr_ptr == &EX_T(opline->op1.u.var).var.ptr) {
 				if (IS_TMP_VAR == IS_VAR && !1) {
 					PZVAL_LOCK(*retval_ptr_ptr); /* undo the effect of get_zval_ptr_ptr() */
 				}
-				zend_error(E_NOTICE, "Only variable references should be returned by reference");
+//				if (opline->extended_value != ZEND_RETURNS_NEW) {
+					zend_error(E_NOTICE, "Only variable references should be returned by reference");
+//				}
 				goto return_by_value;
 			}
 		}
@@ -7091,11 +7097,14 @@ static int ZEND_RETURN_SPEC_VAR_HANDLER(ZEND_OPCODE_HANDLER_ARGS)
 		if (IS_VAR == IS_VAR && !(*retval_ptr_ptr)->is_ref) {
 			if (opline->extended_value == ZEND_RETURNS_FUNCTION &&
 			    EX_T(opline->op1.u.var).var.fcall_returned_reference) {
+			} else if (opline->extended_value == ZEND_RETURNS_NEW) {
 			} else if (EX_T(opline->op1.u.var).var.ptr_ptr == &EX_T(opline->op1.u.var).var.ptr) {
 				if (IS_VAR == IS_VAR && !(free_op1.var != NULL)) {
 					PZVAL_LOCK(*retval_ptr_ptr); /* undo the effect of get_zval_ptr_ptr() */
 				}
-				zend_error(E_NOTICE, "Only variable references should be returned by reference");
+//				if (opline->extended_value != ZEND_RETURNS_NEW) {
+					zend_error(E_NOTICE, "Only variable references should be returned by reference");
+//				}
 				goto return_by_value;
 			}
 		}
@@ -19715,11 +19724,14 @@ static int ZEND_RETURN_SPEC_CV_HANDLER(ZEND_OPCODE_HANDLER_ARGS)
 		if (IS_CV == IS_VAR && !(*retval_ptr_ptr)->is_ref) {
 			if (opline->extended_value == ZEND_RETURNS_FUNCTION &&
 			    EX_T(opline->op1.u.var).var.fcall_returned_reference) {
+			} else if (opline->extended_value == ZEND_RETURNS_NEW) {
 			} else if (EX_T(opline->op1.u.var).var.ptr_ptr == &EX_T(opline->op1.u.var).var.ptr) {
 				if (IS_CV == IS_VAR && !0) {
 					PZVAL_LOCK(*retval_ptr_ptr); /* undo the effect of get_zval_ptr_ptr() */
 				}
-				zend_error(E_NOTICE, "Only variable references should be returned by reference");
+//				if (opline->extended_value != ZEND_RETURNS_NEW) {
+					zend_error(E_NOTICE, "Only variable references should be returned by reference");
+//				}
 				goto return_by_value;
 			}
 		}
