@@ -2,6 +2,7 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? ????, PHP 6.0
 - Unicode support. (Andrei, Dmitry, et al)
+- Return "new" by reference now throws an E_STRICT error. (Dmitry)
 - Added E_STRICT to E_ALL. (Dmitry)
 - Dropped safe_mode support (Ilia, Andi)
 - Dropped zend.ze1_compatibility_mode (Dmitry)
